--- a/videxapp/templates/base.html
+++ b/videxapp/templates/base.html
@@ -16,7 +16,7 @@
             crossorigin="anonymous"></script>
     <title>{% block title %}{% endblock %} | سامانه آنلاین یادگیری و یاددهی ویدکس</title>
 </head>
-<body dir="rtl">
+<body>
 <div class="ui secondary menu" id="navbar">
     {% block tabs %}
     {% endblock %}
