--- a/videxapp/templates/pages/home.html
+++ b/videxapp/templates/pages/home.html
@@ -5,11 +5,11 @@
 {% endblock %}
 
 {% block title %}
-    صفحهٔ اصلی
+    Home Page
 {% endblock %}
 
 {% block content %}
     <h1>
-        سلام. به سامانه‌ی آنلاین یادگیری و یاد‌دهی ویدکس خوش آمدید.
+        Hi! Welcome to videx learning platform.
     </h1>
 {% endblock %}
