--- a/videxapp/templates/pages/home.html
+++ b/videxapp/templates/pages/home.html
@@ -10,6 +10,6 @@
 
 {% block content %}
     <h1>
-        Hi! Welcome to videx learning platform.
+        Hi! Welcome to Videx learning platform.
     </h1>
 {% endblock %}
