--- a/videxapp/templates/pages/profile.html
+++ b/videxapp/templates/pages/profile.html
@@ -5,15 +5,15 @@
 {% endblock %}
 
 {% block title %}
-    نمایه
+    Profile
 {% endblock %}
 
 {% block content %}
-    <h1>نمایه</h1>
+    <h1>Profile</h1>
     <div class="ui breadcrumb">
-        <a class="section" href="{% url 'home' %}">خانه</a>
+        <a class="section" href="{% url 'home' %}">Home</a>
         <i class="right angle icon divider"></i>
-        <div class="active section">نمایه</div>
+        <div class="active section">Profile</div>
     </div><br/>
 
 
