--- a/videxapp/templates/pages/register.html
+++ b/videxapp/templates/pages/register.html
@@ -5,18 +5,18 @@
 {% endblock %}
 
 {% block title %}
-    ثبت‌نام
+    Register
 {% endblock %}
 
 {% block content %}
     <div id="form">
         <form id="register_form" class="ui small form" method="post" action="/register">
-            <h1>ثبت‌نام</h1>
+            <h1>‌Register</h1>
 
             <div class="ui breadcrumb">
-                <a class="section" href="{% url 'home' %}">خانه</a>
+                <a class="section" href="{% url 'home' %}">Home</a>
                 <i class="right angle icon divider"></i>
-                <div class="active section">ثبت‌نام</div>
+                <div class="active section">‌Register</div>
             </div>
 
             {% csrf_token %}
@@ -38,7 +38,7 @@
             <div class="ui negative message">
                 <i class="close icon"></i>
                 <div class="header">
-                    خطا
+                    Error
                 </div>
                 <p>{{ error|escape }}</p>
             </div>
