--- a/videxapp/templates/base.html
+++ b/videxapp/templates/base.html
@@ -12,27 +12,26 @@
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
     <title>{% block title %}{% endblock %} | سامانه آنلاین یادگیری و یاددهی ویدکس</title>
 </head>
-<body>
-<div class="ui secondary menu" id="navbar">
+<body style="background-color: #33A8FF">
+<div class="ui secondary menu" id="navbar" style="background-color: #FFFFFF; padding-bottom: 5px;">
     {% block tabs %}
     {% endblock %}
 </div>
 <div class="ui three column grid">
     <div class="row">
-        <div class="ui column"></div>
-        <div class="ui five column">
-            <div class="ui middle aligned aligned grid">
-                <div class="column">
-                    <div class="ui stacked segment">
-
-                        {% block content %}
-                        {% endblock %}
-                    </div>
-                </div>
+        <div class="ui center aligned column">
+            <a id='B4pI2vO8QU1m_TZcsT1hKw' class='gie-single' href='http://www.gettyimages.com/detail/1149149231' target='_blank' style='color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;'>Embed from Getty Images</a><script>window.gie=window.gie||function(c){(gie.q=gie.q||[]).push(c)};gie(function(){gie.widgets.load({id:'B4pI2vO8QU1m_TZcsT1hKw',sig:'asFIe3iFWQckUnVEVgVhsV8Tb4mgL4IzxBycXD0o6rY=',w:'339px',h:'508px',items:'1149149231',caption: true ,tld:'com',is360: false })});</script><script src='//embed-cdn.gettyimages.com/widgets.js' charset='utf-8' async></script>
+        </div>
+        <div class="ui column">
+            <div class="ui stacked segment">
+                {% block content %}
+                {% endblock %}
             </div>
         </div>
+        <div class="ui center aligned column">
+            <a id='4UlTQjbTT1h8qXdLrVkjWg' class='gie-single' href='http://www.gettyimages.com/detail/902811338' target='_blank' style='color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;'>Embed from Getty Images</a><script>window.gie=window.gie||function(c){(gie.q=gie.q||[]).push(c)};gie(function(){gie.widgets.load({id:'4UlTQjbTT1h8qXdLrVkjWg',sig:'IignYmoxc7rwnw5yY7R_ZB8wsLs0DDwz2FP3haZ59DI=',w:'349px',h:'496px',items:'902811338',caption: true ,tld:'com',is360: false })});</script><script src='//embed-cdn.gettyimages.com/widgets.js' charset='utf-8' async></script>
+        </div>      
     </div>
-    <div class="ui column"></div>
 </div>
 </body>
 </html>
