Change Register button text to English

--- a/videxapp/templates/pages/register.html
+++ b/videxapp/templates/pages/register.html
@@ -21,7 +21,7 @@
 
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="ui fluid large teal submit button" name="submit">ثبت نام</button>
+            <button type="submit" class="ui fluid large teal submit button" name="submit">Register</button>
 
             <div class="ui error message"></div>
         </form>
