--- a/videxapp/templates/pages/register.html
+++ b/videxapp/templates/pages/register.html
@@ -10,7 +10,7 @@
 
 {% block content %}
     <div id="form">
-        <form id="register_form" class="ui small form" method="post" action="/register">
+        <form id="register_form" class="ui small form" method="post" action="/register" enctype="multipart/form-data">
             <h1>‌Register</h1>
 
             <div class="ui breadcrumb">
