Feature: Add comments to each session

--- a/videxapp/templates/bare_base.html
+++ b/videxapp/templates/bare_base.html
@@ -1,4 +1,6 @@
 {% load static %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'general/style.css' %}">
 <!DOCTYPE html>
 <html lang="en">
 <head>
