--- a/videxapp/templates/base.html
+++ b/videxapp/templates/base.html
@@ -1,4 +1,6 @@
 {% load static %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'general/style.css' %}">
 <!DOCTYPE html>
 <html lang="fa">
 <head>
@@ -30,7 +32,7 @@
         </div>
         <div class="ui center aligned column">
             <a id='4UlTQjbTT1h8qXdLrVkjWg' class='gie-single' href='http://www.gettyimages.com/detail/902811338' target='_blank' style='color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;'>Embed from Getty Images</a><script>window.gie=window.gie||function(c){(gie.q=gie.q||[]).push(c)};gie(function(){gie.widgets.load({id:'4UlTQjbTT1h8qXdLrVkjWg',sig:'IignYmoxc7rwnw5yY7R_ZB8wsLs0DDwz2FP3haZ59DI=',w:'349px',h:'496px',items:'902811338',caption: true ,tld:'com',is360: false })});</script><script src='//embed-cdn.gettyimages.com/widgets.js' charset='utf-8' async></script>
-        </div>      
+        </div>
     </div>
 </div>
 </body>
