--- a/videxapp/templates/pages/make_new_session.html
+++ b/videxapp/templates/pages/make_new_session.html
@@ -7,12 +7,12 @@
 {% block content %}
     <div id="form">
         <form id="make_course" class="ui small form" method="post">
-            <h1>Create a lecture</h1>
+            <h1>Create a session</h1>
             <div class="ui breadcrumb">
                 <a class="section" href="{% url 'home' %}">Home</a>
                 <i class="right angle icon divider"></i>
                 <i class="right angle icon divider"></i>
-                <div class="active section">Create a lecture</div>
+                <div class="active section">Create a session</div>
             </div>
             {% csrf_token %}
             {{ form.as_p }}
