Add three types of questions multiple choices, single answer, written questions

--- a/videxapp/templates/pages/exam_page.html
+++ b/videxapp/templates/pages/exam_page.html
@@ -19,8 +19,28 @@
     <h1>{{ exam.name }}</h1>
     <h2>Questions</h2>
     {% if rule == "instructor" %}
-    <a href="./question/add" class="btn btn-primary">Add question</a>
+    <h4>written questions</h4>
+    {% for question in written_questions %}
+        {{question.question_text}} <br>
+    {% endfor %}
+
+    <h4>single answer questions</h4>
+    {% for question in single_answer_questions %}
+        {{question.question_text}} <br>
+    {% endfor %}
+
+    <h4>multiple choices questions</h4>
+    {% for question in multiple_choice_questions %}
+        {{question.question_text}} <br>
+        1. {{question.choice1}} <br>
+        2. {{question.choice2}} <br>
+        3. {{question.choice3}} <br>
+        4. {{question.choice4}} <br>
+        <br><br>
+    {% endfor %}
+    <a href="./{{exam.id}}/question/add " class="btn btn-primary">Add question</a>
     {% endif %}
+
 </div>
 <div class="col-md-3">
     {% if time_state == "before_release" %}
