--- a/videxapp/templates/pages/make_new_course.html
+++ b/videxapp/templates/pages/make_new_course.html
@@ -1,23 +1,22 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    ایجاد واحد
+    Create course
 {% endblock %}
 
 {% block content %}
     <div id="form">
-        <form id="make_course" class="ui small form" method="post">
-            <h1>ایجاد واحد</h1>
+        <form id="make_course" class="ui small form" method="POST" enctype="multipart/form-data">
+            <h1>Create course</h1>
             <div class="ui breadcrumb">
-                <a class="section" href="{% url 'home' %}">خانه</a>
+                <a class="section" href="{% url 'home' %}">Home</a>
                 <i class="right angle icon divider"></i>
-                <i class="right angle icon divider"></i>
-                <div class="active section">ایجاد واحد</div>
+                <div class="active section">Create course</div>
             </div>
 
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="ui fluid large teal submit button">ایجاد</button>
+            <button type="submit" class="ui fluid large teal submit button">Create</button>
             <div class="ui error message"></div>
         </form>
 
