Fix $ instead of %

--- a/videxapp/templates/pages/course_page.html
+++ b/videxapp/templates/pages/course_page.html
@@ -16,7 +16,7 @@
 <div class="col-md-9">
     <h1>{{ course.name }}</h1>
     <h6>Course level: {{ course.level }}</h6>
-    {% if course.cost != 0 $}
+    {% if course.cost != 0 %}
     <h6>Course cost: {{ course.cost }}$</h6>
     {% else %}
     <h6>Course cost: Free!</h6>
